# sc-logger

./: CMakeLists.txt  Doxyfile.in  README.md  conanfile.py
example/: CMakeLists.txt  conanfile.py
example/src/: cis1_core_logger.cpp  cis1_webui_logger.cpp  main.cpp
include/cis1_core_logger/: core_logger.h  core_record.h
include/cis1_webui_logger/: protocol.h  webui_logger.h  webui_record.h
include/scf/: scf.h
include/scf/detail/: format_impl.h  format_preprocessing.h  format_processing.h  specifier_index.h  specifiers.h  to_string.h  type_matching.h  type_matching_helpers.h  type_pack.h
include/scl/: align_info.h  console_handler.h  console_recorder.h  file_handler.h  file_recorder.h  levels.h  logger.h  options.h  process_id.h  record.h  record_handler.h  record_info.h  recorder.h  result.h
include/scl/detail/: format_defines.h  misc.h  process_id.h
src/: file_handler.cpp  file_recorder.cpp  logger.cpp  record.cpp  record_info.cpp
src/cis1_core_logger/: core_logger.cpp  core_record.cpp
src/cis1_webui_logger/: webui_logger.cpp  webui_record.cpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: scf_test.cpp  scl_test.cpp
